# toricv2

./: .gitignore  Cargo.toml  README.md  flake.nix  install.sh  merge-repo.js  package.json
.github/workflows/: test.yaml
api/: index.js  package-lock.json  package.json
dnas/coordination/workdir/: dna.yaml
dnas/coordination/zomes/coordinator/coordination/: Cargo.toml
dnas/coordination/zomes/coordinator/coordination/src/: lib.rs
dnas/coordination/zomes/integrity/coordination/: Cargo.toml
dnas/coordination/zomes/integrity/coordination/src/: lib.rs
dnas/mutual_credit/workdir/: dna.yaml
dnas/mutual_credit/zomes/coordinator/mutual_credit/: Cargo.toml
dnas/mutual_credit/zomes/coordinator/mutual_credit/src/: lib.rs
dnas/mutual_credit/zomes/integrity/mutual_credit/: Cargo.toml
dnas/mutual_credit/zomes/integrity/mutual_credit/src/: lib.rs
dnas/registry/workdir/: dna.yaml
dnas/registry/zomes/coordinator/registry/: Cargo.toml
dnas/registry/zomes/coordinator/registry/src/: blobs.rs  lib.rs
dnas/registry/zomes/integrity/registry/: Cargo.toml
dnas/registry/zomes/integrity/registry/src/: lib.rs
frontend/: index.html
llm_text_transcripts/: 5.20.txt  5.30.txt  merged-repo-2026-03-16T22-15-40.562Z.txt
src-tauri/src/: main.rs
tests/: package.json  vitest.config.ts
tests/src/registry/registry/: common.ts  coordination.test.ts  registry.test.ts
ui/: index.html  package.json
validator/: index.js
workdir/: happ.yaml  web-happ.yaml
