[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.7.0"
hdk = "=0.6.0"
holochain_serialized_bytes = "*"
serde = "1.0"

[workspace.dependencies.registry]
path = "dnas/registry/zomes/coordinator/registry"

[workspace.dependencies.registry_integrity]
path = "dnas/registry/zomes/integrity/registry"
