[package]
name = "coordination"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "coordination"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
sha2 = { workspace = true }
hex = "0.4"
coordination_integrity = { path = "../../integrity/coordination" }