[package]
name = "registry"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "registry"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
holochain_serialized_bytes = { workspace = true }
registry_integrity = { workspace = true }